--- a/app.yaml
+++ b/app.yaml
@@ -1,12 +1,5 @@
-runtime: python27
-api_version: 1
-threadsafe: true
+runtime: php
+env: flex
 
-handlers:
-- url: /
-  static_files: www/index.html
-  upload: www/index.html
-
-- url: /(.*)
-  static_files: www/\1
-  upload: www/(.*)
+runtime_config:
+  document_root: web
